# swm-cloud-gate

./: .gitignore  .pypirc  AGENTS.md  MANIFEST.in  Makefile  README.md  TODO  pyproject.toml  requirements.in  requirements.txt  run-mocked.sh  run.py  run.sh
.github/workflows/: ci.yml
HOWTO/: AZURE.md
app/: cache.py  config.py  main.py
app/routers/: baseconnector.py  models.py
app/routers/azure/: connector.py  converters.py  images.py  partitions.py  sizes.py
app/routers/azure/templates/: cloud-init.sh  cloud-init.yaml  partition.bicep  partition.json
app/routers/openstack/: connector.py  converters.py  images.py  models.py  partitions.py  sizes.py
app/routers/openstack/templates/: cloud-init.sh  heat_stack.json  heat_stack.yaml
config/: cloud-gate.json  cloud-gate.yaml
scripts/api/: create-partition.sh  list-images.sh  list-partitions.sh
scripts/azure/: spawn-test-partition.py  upload-file.sh  upload-image.py
scripts/azure/api/: create-partition.sh  delete-partition.sh  get-image.sh  get-partition-by-id.sh  get-partition-by-name.sh  get-partition.sh  helpers.sh  list-flavors.sh  list-images.sh  list-partitions.sh
scripts/openstack/api/: create-partition.sh  delete-partition.sh  get-image.sh  get-partition.sh
swmcloudgate/: cache.py  config.py  logging.conf  logging.yaml  main.py  start.py  update-azure-caches.py
swmcloudgate/routers/: baseconnector.py  models.py
swmcloudgate/routers/azure/: connector.py  converters.py  images.py  partitions.py  sizes.py
swmcloudgate/routers/azure/templates/: cloud-init.sh  cloud-init.yaml  partition.json
swmcloudgate/routers/openstack/: connector.py  converters.py  images.py  partitions.py  sizes.py
swmcloudgate/routers/openstack/templates/: cloud-init.sh
test/: test_azure.py  test_cache.py  test_openstack.py  testopenstack.py
test/data/: azure.json  responses.json
